# csv-libs-benchmark

./: .gitignore  CMakeLists.txt  README.md  de_serialization.cpp  de_serialization.hpp  main.cpp
csv/: file0.csv  file1.csv  file2.csv  file3.csv  file5.csv  file6.csv  file7.csv  tiny.csv
libs/: csv2.hpp
